tmux - Add new copy syntax

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -96,9 +96,11 @@
     # bind Escape copy-mode
     unbind p
     bind p paste-buffer
-    bind -t vi-copy 'v' begin-selection
+    # bind -t vi-copy 'v' begin-selection
+    bind-key -T copy-mode-vi 'v' send -X begin-selection
     # bind -t vi-copy 'y' copy-selection
-    bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+    # bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+    bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
     # bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
         # http://unix.stackexchange.com/a/131187
     bind C-p run-shell "tmux set-buffer \"$(xclip -selection clipboard -o)\"; tmux paste-buffer"
@@ -109,7 +111,8 @@
 
     # Rectangle copy, column copy, copy selection
         # Column copy       : prefix+[, C-v, v
-            bind-key -t vi-copy 'C-v' rectangle-toggle
+            # bind-key -t vi-copy 'C-v' rectangle-toggle
+            bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
         # List vi copy keys : prefix, :list-keys -t vi-copy
             # http://superuser.com/a/593712/292101
 
